Thu Jul  5 15:48:42 BST 2001  Colin Watson  <cjwatson@debian.org>

	* Version: 2.3.19.

	* docs/NEWS: Update.
	* man-db.gnu: Update. Change formatting to something closer to that
	  currently in the Free Software Directory CVS repository.
	* man-db.lsm: Update.

Thu Jul  5 14:27:17 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man/man5/manpath.man5 (FORMAT): MANDB_MAP now only affects
	  setuidness when in the system configuration file.
	* src/man_db.conf.in: Likewise.

	* po/cs.po, po/de.po, po/es.po, po/fr.po, po/it.po, po/ja.po:
	  Update.

Wed Jul  4 13:39:40 BST 2001  Colin Watson  <cjwatson@debian.org>

	The product of some hacking at the Debian Conference. Enjoy.

	* docs/NEWS: Describe recent changes.

	* include/manconfig.h.in: Add SYSTEM_CAT and USER_CAT defines.
	  Move includes from security.c to ...
	* src/security.h: ... here (new file).
	* src/man.c: Include security.h.
	* src/mandb.c: Likewise.
	* src/security.c: Likewise.

	* src/manp.c (add_mandb_map): Take an additional parameter, user.
	  Use the new MANDB_MAP_USER flag instead of MANDB_MAP if it is set.
	  (cat_manpath): Look at user catpaths before system catpaths.
	  (add_to_dirlist): Take user parameter, passed through to
	  add_mandb_map().
	  (read_config_file): Call add_to_dirlist() with user set for
	  ~/.manpath, and reset for /etc/manpath.config (security fix).
	  (get_mandb_manpath): Allow user manpaths.
	  (global_catpath): Rename to get_catpath(), and only allow it to
	  handle user catpaths (from ~/.manpath) as well if explicitly
	  requested.
	  (is_global_mandir): Note that this is trusted.
	* src/manp.h: Reflect renaming of global_catpath() to get_catpath().

	* src/man.c (need_to_rerun): Use get_catpath() instead of
	  global_catpath().
	  (make_roff_command): Likewise.
	  (display): Likewise.
	  (find_cat_file): Likewise.
	  (try_db_section): Likewise.
	  (try_db): Likewise.
	* src/catman.c (main): Likewise (check only user mandirs).